k3s/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: networktools-virtualservice
  namespace: nwtools
spec:
  hosts:
  - "*"
  gateways:
  - networktools-gateway
  http:
  - match:
    - uri:
        exact: /nwt
    rewrite:
      uri: /
    route:
    - destination:
        host: networktools-service.nwtools.svc.cluster.local
        port:
          number: 8080
